--- a/many/nginx/one/template.nginx.conf
+++ b/many/nginx/one/template.nginx.conf
@@ -14,11 +14,15 @@ stream {
 #     }
 
     upstream redis {
-        server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
+       server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
     }
 
     upstream redis_insight {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
+    }
+
+    upstream cockroach_node {
+        server ${NGINX_TWO_HOST}:${GATEWAY_COCKROACH_NODE_PORT};
     }
 
     upstream cockroach_sql {
@@ -32,7 +36,7 @@ stream {
     }
 
     upstream milvus {
-        server ${MILVUS_PROXY_HOST}:${MILVUS_PROXY_PORT};
+        server ${MILVUS_STANDALONE_HOST}:${MILVUS_STANDALONE_PORT};
     }
 
     upstream milvus_attu {
@@ -49,16 +53,8 @@ stream {
         server ${MINIO_THREE_HOST}:${MINIO_THREE_CONSOLE_PORT};
     }
 
-    upstream kafka {
-        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_PORT};
-    }
-
-    upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
-    }
-
     upstream infinity_one {
-        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_INFINITY_ONE_PORT};
     }
 
 #     server {
@@ -79,6 +75,11 @@ stream {
     server {
         listen ${GATEWAY_REDIS_INSIGHT_PORT};
         proxy_pass redis_insight;
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_NODE_PORT};
+        proxy_pass cockroach_node;
     }
 
     server {
@@ -109,16 +110,6 @@ stream {
     server {
         listen ${GATEWAY_MINIO_CONSOLE_PORT};
         proxy_pass minio_console;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_PORT};
-        proxy_pass kafka;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_UI_PORT};
-        proxy_pass kafka_ui;
     }
 
     server {
