--- a/many/nginx/two/template.nginx.conf
+++ b/many/nginx/two/template.nginx.conf
@@ -36,6 +36,10 @@ stream {
         server ${MINIO_THREE_HOST}:${MINIO_THREE_NODE_PORT};
     }
 
+    upstream infinity_one {
+        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
+    }
+
     server {
         listen ${GATEWAY_REDIS_PORT};
         proxy_pass redis;
@@ -59,6 +63,11 @@ stream {
     server {
         listen ${GATEWAY_MINIO_NODE_PORT};
         proxy_pass minio_node;
+    }
+
+    server {
+        listen ${GATEWAY_INFINITY_ONE_PORT};
+        proxy_pass infinity_one;
     }
 
 }
