--- a/one/nginx/two/template.nginx.conf
+++ b/one/nginx/two/template.nginx.conf
@@ -26,8 +26,8 @@ stream {
         server ${MINIO_ONE_HOST}:${MINIO_ONE_NODE_PORT};
     }
 
-    upstream kafka {
-        server ${KAFKA_ONE_HOST}:${KAFKA_ONE_PORT};
+    upstream infinity_one {
+        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
     }
 
     server {
@@ -56,8 +56,8 @@ stream {
     }
 
     server {
-        listen ${GATEWAY_KAFKA_PORT};
-        proxy_pass kafka;
+        listen ${GATEWAY_INFINITY_ONE_PORT};
+        proxy_pass infinity_one;
     }
 
 }
