--- a/many/.env
+++ b/many/.env
@@ -13,12 +13,10 @@ GATEWAY_COCKROACH_SQL_PORT=26257
 GATEWAY_COCKROACH_HTTP_PORT=8081
 GATEWAY_MILVUS_PORT=19530
 GATEWAY_MILVUS_ATTU_PORT=8082
-GATEWAY_KAFKA_PORT=9092
-GATEWAY_KAFKA_UI_PORT=8083
 GATEWAY_ETCD_CLIENT_PORT=2378
 GATEWAY_ETCD_PEER_PORT=2380
 GATEWAY_MINIO_NODE_PORT=9000
-GATEWAY_MINIO_CONSOLE_PORT=8084
+GATEWAY_MINIO_CONSOLE_PORT=8083
 GATEWAY_INFINITY_ONE_PORT=7997
 
 GATEWAY_REDIS_PASSWORD=password
@@ -32,8 +30,6 @@ GATEWAY_MILVUS_PASSWORD=password
 
 GATEWAY_MINIO_ROOT_USER=user
 GATEWAY_MINIO_ROOT_PASSWORD=password
-
-GATEWAY_KAFKA_CLUSTER_ID=kafka-cluster-one
 
 GATEWAY_INFINTY_ONE_MODEL_NAME=intfloat/multilingual-e5-large-instruct
 
@@ -58,29 +54,10 @@ REDIS_THREE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
 REDIS_INSIGHT_ONE_HOST=redis-insight-one
 REDIS_INSIGHT_ONE_PORT=5540
 
-MILVUS_PROXY_HOST=milvus-proxy
-MILVUS_PROXY_PORT=${GATEWAY_MILVUS_PORT}
-MILVUS_ROOT_COORD_HOST=milvus-root-coord
-MILVUS_QUERY_COORD_HOST=milvus-query-coord
-MILVUS_DATA_COORD_HOST=milvus-data-coord
-MILVUS_INDEX_COORD_HOST=milvus-index-coord
-MILVUS_QUERY_NODE_HOST=milvus-query-node
-MILVUS_DATA_NODE_HOST=milvus-data-node
-MILVUS_INDEX_NODE_HOST=milvus-index-node
+MILVUS_STANDALONE_HOST=milvus-standalone
+MILVUS_STANDALONE_PORT=${GATEWAY_MILVUS_PORT}
 MILVUS_ATTU_ONE_HOST=milvus-attu-one
 MILVUS_ATTU_ONE_PORT=3000
-
-KAFKA_ONE_HOST=kafka-one
-KAFKA_ONE_PORT=${GATEWAY_KAFKA_PORT}
-KAFKA_ONE_NODE_ID=1
-KAFKA_TWO_HOST=kafka-two
-KAFKA_TWO_PORT=${GATEWAY_KAFKA_PORT}
-KAFKA_TWO_NODE_ID=2
-KAFKA_THREE_HOST=kafka-three
-KAFKA_THREE_PORT=${GATEWAY_KAFKA_PORT}
-KAFKA_THREE_NODE_ID=3
-KAFKA_UI_ONE_HOST=kafka-ui-one
-KAFKA_UI_ONE_PORT=8080
 
 ETCD_ONE_HOST=etcd-one
 ETCD_ONE_NAME=one
