--- a/one/nginx/one/template.nginx.conf
+++ b/one/nginx/one/template.nginx.conf
@@ -14,15 +14,19 @@ stream {
 #     }
 
     upstream redis {
-        server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
+       server ${NGINX_TWO_HOST}:${GATEWAY_REDIS_PORT};
     }
 
     upstream redis_insight {
         server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
+    upstream cockroach_node {
+        server ${NGINX_TWO_HOST}:${GATEWAY_COCKROACH_NODE_PORT};
+    }
+
     upstream cockroach_sql {
-        server ${NGINX_TWO_HOST}:${COCKROACH_ONE_SQL_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_COCKROACH_SQL_PORT};
     }
 
     upstream cockroach_http {
@@ -45,18 +49,9 @@ stream {
         server ${MINIO_ONE_HOST}:${MINIO_ONE_CONSOLE_PORT};
     }
 
-    upstream kafka {
-        server ${NGINX_TWO_HOST}:${GATEWAY_KAFKA_PORT};
-    }
-
-    upstream kafka_ui {
-        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
-    }
-
     upstream infinity_one {
-        server ${INFINITY_ONE_HOST}:${INFINITY_ONE_PORT};
+        server ${NGINX_TWO_HOST}:${GATEWAY_INFINITY_ONE_PORT};
     }
-
 
 #     server {
 #         listen ${GATEWAY_FRONTEND_PORT};
@@ -76,6 +71,11 @@ stream {
     server {
         listen ${GATEWAY_REDIS_INSIGHT_PORT};
         proxy_pass redis_insight;
+    }
+
+    server {
+        listen ${GATEWAY_COCKROACH_NODE_PORT};
+        proxy_pass cockroach_node;
     }
 
     server {
@@ -106,16 +106,6 @@ stream {
     server {
         listen ${GATEWAY_MINIO_CONSOLE_PORT};
         proxy_pass minio_console;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_PORT};
-        proxy_pass kafka;
-    }
-
-    server {
-        listen ${GATEWAY_KAFKA_UI_PORT};
-        proxy_pass kafka_ui;
     }
 
     server {
