Improve pip and cuda-torch-tensorflow image.

--- a/docker/research-assistant-backend-dev/.env
+++ b/docker/research-assistant-backend-dev/.env
@@ -2,6 +2,8 @@ APP_PATH=C:\Data\Apps\research-assistant-backend
 CACHE_PATH=C:\Data\Apps\research-assistant-infrastructure\data\cache
 NLTK_DATA_PATH=C:\Data\Apps\research-assistant-infrastructure\data\nltk_data
 
+BACKEND_PORT=3000
+
 JUPYTER_PORT=8888
 JUPYTER_TOKEN=token
 
