--- a/docker/cuda-torch-tensorflow/Dockerfile
+++ b/docker/cuda-torch-tensorflow/Dockerfile
@@ -17,7 +17,13 @@ RUN pip3 install --upgrade pip
 RUN pip3 install torch==2.2.0 torchvision torchaudio
 
 # Install tensorflow
-RUN pip3 install tensorflow[and-cuda]==2.15.1
+RUN pip3 install tensorflow[and-cuda]
+
+# Download TensorRT 8.6.1.
+RUN yes | DEBIAN_FRONTEND=noninteractive apt install -y aria2
+RUN aria2c https://developer.nvidia.com/downloads/compute/machine-learning/tensorrt/secure/8.6.1/tars/TensorRT-8.6.1.6.Linux.x86_64-gnu.cuda-12.0.tar.gz
+RUN tar -xzvf TensorRT-8.6.1.6.Linux.x86_64-gnu.cuda-12.0.tar.gz
+RUN rm TensorRT-8.6.1.6.Linux.x86_64-gnu.cuda-12.0.tar.gz
 
 # Copy entrypoint.sh to image.
 COPY ./entrypoint.sh /entrypoint.sh
