--- a/one/.env.example
+++ b/one/.env.example
@@ -1,3 +1,4 @@
+# Infrastructure
 APP_PATH=C:\Data\Apps\research-assistant-backend
 CACHE_PATH=C:\Data\Apps\research-assistant-infrastructure\data\cache
 NLTK_DATA_PATH=C:\Data\Apps\research-assistant-infrastructure\data\nltk_data
@@ -19,6 +20,7 @@ GATEWAY_MINIO_NODE_PORT=9000
 GATEWAY_MINIO_CONSOLE_PORT=8083
 GATEWAY_INFINITY_ONE_PORT=7997
 
+GATEWAY_REDIS_USER=default
 GATEWAY_REDIS_PASSWORD=password
 
 GATEWAY_COCKROACH_USER=user
@@ -37,10 +39,10 @@ NGINX_ONE_HOST=nginx-one
 NGINX_TWO_HOST=nginx-two
 
 FRONTEND_HOST=frontend
-FRONTEND_PORT=${GATEWAY_FRONTEND_PORT}
+FRONTEND_PORT=80
 
 BACKEND_HOST=backend
-BACKEND_PORT=${GATEWAY_BACKEND_PORT}
+BACKEND_PORT=8000
 
 REDIS_ONE_HOST=redis-one
 REDIS_ONE_PORT=${GATEWAY_REDIS_PORT}
@@ -79,3 +81,37 @@ COCKROACH_ONE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
 INFINITY_ONE_HOST=infinity-one
 INFINITY_ONE_PORT=${GATEWAY_INFINITY_ONE_PORT}
 INFINITY_ONE_MODEL_NAME=${GATEWAY_INFINITY_ONE_MODEL_NAME}
+
+# Frontend
+NODE_ENV=development
+NODE_PORT=${GATEWAY_FRONTEND_PORT}
+VITE_API_URL_BACKEND_ONE=http://${GATEWAY_HOST}:${GATEWAY_BACKEND_PORT}/api
+
+# Backend
+LLM_ONE_ANTHROPIC_API_KEY_ONE=
+
+EMBEDDING_ONE_HOST=${GATEWAY_HOST}
+EMBEDDING_ONE_PORT=${GATEWAY_INFINITY_ONE_PORT}
+
+DS_ONE_HOST=${GATEWAY_HOST}
+DS_ONE_PORT=${GATEWAY_COCKROACH_SQL_PORT}
+DS_ONE_USER=${GATEWAY_COCKROACH_USER}
+DS_ONE_PASSWORD=${GATEWAY_COCKROACH_PASSWORD}
+DS_ONE_DATABASE=${GATEWAY_COCKROACH_DATABASE}
+
+DS_TWO_HOST=${GATEWAY_HOST}
+DS_TWO_PORT=${GATEWAY_REDIS_PORT}
+DS_TWO_USER=${GATEWAY_REDIS_USER}
+DS_TWO_PASSWORD=${GATEWAY_REDIS_PASSWORD}
+
+DS_THREE_HOST=${GATEWAY_HOST}
+DS_THREE_PORT=${GATEWAY_MINIO_NODE_PORT}
+DS_THREE_USER=${GATEWAY_MINIO_ROOT_USER}
+DS_THREE_PASSWORD=${GATEWAY_MINIO_ROOT_PASSWORD}
+
+DS_FOUR_HOST=${GATEWAY_HOST}
+DS_FOUR_PORT=${GATEWAY_MILVUS_PORT}
+DS_FOUR_USER=${GATEWAY_MILVUS_USER}
+DS_FOUR_PASSWORD=${GATEWAY_MILVUS_PASSWORD}
+
+TEMP_DATASTORE_PATH='apps/outers/datastores/temps'
