--- a/docker/many/docker-compose.yml
+++ b/docker/many/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       - backend
       - cockroach-init
       - redis-init
+      - milvus-standalone
       - nginx-two
   nginx-two:
     image: nginx:latest
