Add support for openai llm.

--- a/docker/many/.env.example
+++ b/docker/many/.env.example
@@ -121,6 +121,7 @@ VITE_API_URL_BACKEND_ONE=http://${GATEWAY_HOST}:${BACKEND_PORT}/api
 
 # Backend
 LLM_ONE_ANTHROPIC_API_KEY_ONE=
+LLM_TWO_OPENAI_API_KEY_ONE=
 
 EMBEDDING_ONE_HOST=${GATEWAY_HOST}
 EMBEDDING_ONE_PORT=${GATEWAY_INFINITY_ONE_PORT}
