--- a/docker/cuda-torch-tensorflow/Dockerfile
+++ b/docker/cuda-torch-tensorflow/Dockerfile
@@ -1,23 +1,22 @@
 # Initialize base image.
-FROM nvidia/cuda:12.3.2-cudnn9-devel-ubuntu22.04
+FROM nvidia/cuda:12.4.1-cudnn-devel-ubuntu22.04
 
 # Update apt repositories.
 RUN apt update -y
 
 # Install apt dependencies.
 RUN yes | DEBIAN_FRONTEND=noninteractive apt install -y \
-    libopencv-dev \
     python3 \
     python3-pip
 
 # Upgrade pip.
-RUN pip3 install --upgrade pip
+RUN pip3 install --upgrade pip --use-feature=fast-deps
 
 # Install torch
-RUN pip3 install torch==2.2.0 torchvision torchaudio
+RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121 --use-feature=fast-deps
 
 # Install tensorflow
-RUN pip3 install tensorflow[and-cuda]
+RUN pip3 install tensorflow[and-cuda] --use-feature=fast-deps
 
 # Download TensorRT 8.6.1.
 RUN yes | DEBIAN_FRONTEND=noninteractive apt install -y aria2
